# newsletter

./: Cargo.toml
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: mod.rs  subscription.rs
tests/: health_check.rs
