[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.10.2"
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
config = "0.15.11"
uuid = { version = "1.16.0", features = ["v4"] }
chrono = { version = "0.4.40", default-features = false, features = ["clock"] }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.12.15"
