[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.10.2"
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4"] }
chrono = { version = "0.4.40", default-features = false, features = ["clock"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
config = "0.15.11"
once_cell = "1.21.3"

[dependencies.sqlx]
version = "0.8.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.12.15"
